220719 build.gradle의 deprecated 부분 수정, Application.java 작성 시작

--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,11 @@ repositories {
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+//    compile('org.springframework.boot:spring-boot-starter-web')           deprecated 됐음
+//    testCompile('org.springframework.boot:spring-boot-starter-test')      deprecated 됐음
+
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 plugins {
@@ -38,8 +41,8 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
 test {
